--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Data Visualization #4 Choropleth Map by Qvistsson</title>
+    <title>Data Visualization #4 Choropleth Map by Oscar Lindqvist</title>
     <link href="style.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
